# transcriber

./: .gitignore  LICENSE  README.md  border.py  compare_models.py  compare_transcription_models_console.py  config.toml  google_test.py  kb.py  pyproject.toml  realtime_experiment.py  recorder.py  repro_pycaw.py  requirements.txt  run_transcriber.bat  run_transcriber.sh  stop_transcriber.bat  stt.py  tmp.py  transcriber.py  transcriber_macos.py  transcriber_realtime.py  transcription_diff_views.html  transcription_model_results.json  utils.py  volume.py
